Colaboratory kullanılarak oluşturuldu

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "LogisticRegression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIHUo5Tm1wq5XJeVmLn0RN",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNZcA2cOI3Uh2I1TRIVyg6k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +53,7 @@
         "import numpy as np \n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
         "  z=1/(1+np.exp(-x))   \n",
         "  return z"
       ],
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -82,18 +83,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "sJCCD_5bDb_A",
-        "outputId": "faf1fa56-9166-442b-c0b3-454e857ef69f",
+        "outputId": "01657411-d72c-4f1b-acda-6bf4dd833484",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "x=5 \n",
+        "x=5\n",
         "\n",
         "Sigmoid(x)"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,7 +106,53 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ZBzxijyUJvE"
+      },
+      "source": [
+        "0 - 10 a kadar olan değerlerin sigmoid function degerleri"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l0xs0TN-P4-S",
+        "outputId": "b08446b8-6657-4e16-ba20-d041d1ede059",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "values=[]\n",
+        "for i in range(11):\n",
+        "  values.append(Sigmoid(i))\n",
+        "  print(\"{} = {}\".format(i,values[i]))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 = 0.5\n",
+            "1 = 0.7310585786300049\n",
+            "2 = 0.8807970779778823\n",
+            "3 = 0.9525741268224334\n",
+            "4 = 0.9820137900379085\n",
+            "5 = 0.9933071490757153\n",
+            "6 = 0.9975273768433653\n",
+            "7 = 0.9990889488055994\n",
+            "8 = 0.9996646498695336\n",
+            "9 = 0.9998766054240137\n",
+            "10 = 0.9999546021312976\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -129,7 +176,7 @@
         "  b=0.0\n",
         "  return w,b"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +194,7 @@
         "\n",
         "weight_bias(dim)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +247,7 @@
         "\n",
         "  return cost,gradients"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +269,7 @@
         "print(\"derivative_weight=\"+str(gradients[\"dw\"]))\n",
         "print(\"derivative_bias=\"+str(gradients[\"db\"]))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +333,7 @@
         "\n",
         "  return params,gradients,costs\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +354,7 @@
         "print(\"dw=\"+str(gradients[\"dw\"]))\n",
         "print(\"db=\"+str(gradients[\"db\"]))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +456,7 @@
         "\n",
         "  return y_prediction      \n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +475,7 @@
         "x = np.array([[1.,-1.1,-3.2],[1.2,2.,0.1]])\n",
         "print (\"predictions = \" + str(Predict(w, b, x)))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,17 +504,6 @@
         "\n",
         "- Çünkü Sigmoid fonksionu probabilistik(probability) değer döndürür"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nahuprhYVumO"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
